# Scion

./: .gitignore  DATASET_CARD.md  LICENSE  MODEL_CARD.md  PLAN.md  README.md  RESULTS.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt  train.sh  verify_adapter.py
.github/workflows/: verify.yml
adapters-round2/: adapter_config.json
artifacts/: scion-bonsai-27b.manifest.json
artifacts/receipts/: conversionReceipt.json  courseMapperSmoke.json  (+6 more)
configs/: train-bonsai-27b.json
contracts/: kernelSchemas.mjs
data/: app-flywheel.jsonl  build-ledger.json  preference-pairs-atoms.jsonl  test.jsonl  train.jsonl  valid.jsonl
docs/: BAKEOFF.md  CAPABILITY_LADDER.md  COURSEMAPPER.md  MODEL_CARD.md  ROADMAP_V2.1.md
eval/: fixtures.jsonl  heldout-fixtures.jsonl
gauntlet/: README.md
runtime/: README.md  sModel.mjs  scion_openai_server.mjs  serve_scion.py
scion/: __init__.py  browser_package.py  cli.py  constants.py  contracts.py  convert.py  corpus_manifest.py  critic_filter.py  dataset.py  evaluate.py  gguf_evaluation.py  local_evaluation.py  local_inference.py  manifest.py  mlx_lora.py  model_registry.py  packaging.py  release_archives.py  release_manifest.py  runtime.py  schemas.py  seed_tasks.py  server.py  task_contracts.py  teacher_corpus.py  token_audit.py  training.py
scripts/: audit_orpo_tokens.py  bootstrap_macos.sh  build_dataset_manifest.py  build_release_archives.py  build_release_manifest.py  build_seed_tasks.py  compare_evaluations.py  convert_mlx_lora_to_peft.py  evaluate_gguf_runtime.py  evaluate_student.py  filter_with_critic.py  generate_teacher_corpus.py  package_browser_adapter.py  package_mlx_adapter.py  patch_mlx_lm_transformers5.py  rescore_coursemapper_runtime.py  seeded_mlx_vlm_lora.py  teacher_canary.py  train_student.py  validate_coursemapper_package.mjs
tests/: test_contracts.py  test_corpus_manifest.py  test_cors.py  test_critic_filter.py  test_dataset.py  test_evaluate.py  test_local_evaluation.py  test_manifest.py  test_mlx_lora.py  test_model_registry.py  test_packaging.py  test_release_archives.py  test_schemas.py  test_seed_tasks.py  test_server.py  test_task_contracts.py  test_token_audit.py  test_training.py
(+30 files in other folders)
