[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "scion-edu"
version = "3.0.0"
description = "Reproducible local distillation and Gemma 4 adapters for CourseMapper"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Scion contributors" }]
dependencies = ["huggingface-hub==1.22.0"]

[project.optional-dependencies]
train = [
  "datasets==5.0.0",
  "mlx==0.31.2",
  "mlx-lm==0.31.3",
  "mlx-vlm==0.6.3",
  "numpy==2.5.1",
  "pyarrow==25.0.0",
  "safetensors==0.8.0",
  "tokenizers==0.22.2",
  "torch==2.10.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "torchvision==0.25.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "transformers==5.13.0",
]
convert = ["mlx-lm==0.31.3", "numpy==2.5.1", "safetensors==0.8.0"]
dev = ["pytest==9.0.2", "ruff==0.15.6"]

[project.scripts]
scion = "scion.cli:main"

[tool.setuptools.packages.find]
include = ["scion*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
